2018-04-22  Dirk Frederickx (brushed AT apache DOT org)

       * 2.10.4-git-08  Adding support for mobile devices to the Haddock Template
            See JSPWIKI-835
            Part-1 -- many style adjustment to fit smaller screens
            - Sidebar now slides over the main page on mobile devices
            - Header (pagename, and menu bar) are better fit for small screens
            - Width of several menu's and dropdowns is restricted for small screens
            - Editor toolbar resized for small screens

            Other:
            - Editor toolbar now remains on screen, even when scrolling down
            - Small tweaks of the RecentChanges output
            - JSPWIKI-1068 : fixing positioning of the TitleBox


2018-04-19  Dirk Frederickx (brushed AT apache DOT org)

       * 2.10.4-git-07 Adding a favicon to the haddock template

2018-04-11  Dirk Frederickx (brushed AT apache DOT org)

       * 2.10.4-git-06  JSPWIKI-1069 i18n errors in german translation

2018-03-31  Dirk Frederickx (brushed AT apache DOT org)

       * 2.10.4-git-05  JSPWIKI-1068 TitleBox rendering on Haddock

2018-03-29  Juan Pablo Santos (juanpablo AT apache DOT org)

       * 2.10.4-git-04

       * JSPWIKI-1039/JSPWIKI-1067: ACLs are not taken into account when cache
         is disabled / View-only ACLs are not enforced

2018-03-29  Juan Pablo Santos (juanpablo AT apache DOT org)

       * 2.10.4-git-03

       * Main page can be revealed when invoking some JSPs without parameters
         (reported by Motohiko Matsuda, thanks!)

2018-03-25  Juan Pablo Santos (juanpablo AT apache DOT org)

       * 2.10.4-git-02

       * Further fix on JSPWIKI-1064 - Link to non-existing page doesn't change if
         linked page is created, not all page caches were properly flushed.

2018-03-04  Juan Pablo Santos (juanpablo AT apache DOT org)

       * Fixed all javadoc errors when building using java 8 - no version bump

2018-02-25  Dirk Frederickx (brushed AT apache DOT org)
