@@ -38,7 +38,6 @@ DOM structure:
     display:inline-block;
     outline:0;
     float:left;
-    width:2em;
     line-height:1.4; //heuristic, for vertical
 
     // triangular bullets
