@@ -39,6 +39,7 @@ DOM structure:
     float:right;
     //clear:right; //float subsequent boxes next to each-other
     width: @wiki-commentbox-width;
+	min-width: @wiki-small-viewport-dialog-width;
     margin:0 0 .5em .5em;
     .small;
 
