@@ -39,7 +39,9 @@ DOM structure:
 .filter-input {
 
     .form-control {
+    	display:inline-block;
         width: 40%;
+        min-width: @wiki-small-viewport-dialog-width;
         padding-right: 1.5em;
         //&:focus ~ .icon-filter { .hide; }
     }
