@@ -22,36 +22,63 @@
 Section: Responsive styles for small viewports or screens
 	@screen-xs-min : 600px
 	Typical layout changes needed for phones, small tablets.
-	
+
 
 	TODO::
-		!Sidebar should automatically close after navigating ... !! 
+		!Sidebar should automatically close after navigating ... !!
 	        default sidebar view for userpref & login : should be HIDE !
-		
-	    FFS: responsive tables :  should scroll left-right on small screens
 
-		style.less : 
-			make some styles smaller (commentbox float?)
-			make tab padding smaller
-			columns should be shown vertically
-			wider content should scroll horizontally
-			...
-		
+	    FFS: responsive tables :  should scroll left-right on small screens
 
 */
 
+/*
+very small screen-sizes,  phones in portrait mode
+*/
+@media only screen and (max-width: @wiki-xsmall-viewport) {
 
-@wiki-small-viewport: 768px;
-@wiki-small-viewport-menu-width: 280px;
+	// Columns.less
+	.columns {
+		display:block;
+		.col {
+			min-width:100%;
+			float:none;
+			padding:0;
+		}
+		&.border {
+			> .col { padding: @padding-base-vertical  @padding-base-horizontal; }
+			> .col:not(:last-child) { border-right:none; border-bottom: 1px solid @btn-default-border; }
+		}
 
+	}
+
+
+	// CommentBox.less
+	.commentbox { width:100%; }
+
+}
+
+/*
+Medium size screens,  tablets,  phones in landscape mode
+*/
 @media only screen and (max-width: @wiki-small-viewport) {
 
-	//generic
-	.input-xs { 
-		.input-sm; 
-		padding: @padding-xs-vertical @padding-xs-horizontal; 
+	//reusable class below
+	.input-xs {
+		.input-sm;
+		padding: @padding-xs-vertical @padding-xs-horizontal;
 		height:auto;
 	}
+	//make all buttons small
+	.btn { .btn-xs; }
+
+	// bootstrap  nav.less
+	.nav > li > a { padding: @nav-sm-link-padding; }
+
+	// bootstrap  panel.less
+	.panel-heading,
+	.panel-body { padding: @nav-sm-link-padding; }
+
 
 	// type.less
 	// grid.less
@@ -69,26 +96,26 @@ Section: Responsive styles for small viewports or screens
     	a,  .cursor {
         	padding:0.2em;
 	        border:1px solid transparent;
-	        
-	        > span[class] { 
+
+	        > span[class] {
 	        		position:relative;
-	        		display:inline-block; 
-	        		width:1ex; 
+	        		display:inline-block;
+	        		width:1ex;
 	        		top:0.4em;
 	        		white-space:nowrap;
 	        		font-family:@font-family-monospace;
 	        		overflow:hidden;
 	        		text-align:center;
 	        		visibility:hidden;
-	        		&:before { 
-	        			visibility:visible; 
+	        		&:before {
+	        			visibility:visible;
 	        		}
-	        } 
-	        .first:before { content:"\ab"; }
-	        .prev:before { content:"\3c"; }
-	        .next:before { content:"\3e"; }
-	        .last:before { content:"\bb"; }
-	        .all:before  { content:"\2200"; }
+	        }
+	        .first:before { content:"\ab"; } //<<
+	        .prev:before { content:"\3c"; } //<
+	        .next:before { content:"\3e"; } //>
+	        .last:before { content:"\bb"; } //>>
+	        .all:before  { content:"\2200"; } //all
 
     	}
 	}
@@ -97,18 +124,21 @@ Section: Responsive styles for small viewports or screens
 	// Magnify.less
 
 	// Viewer.less
+	.viewport {
+		max-width: @wiki-small-viewport-width;
+		overflow:hidden;
+	}
 	// Viewer.Slimbox.less
 	// Viewer.Carousel.less
 
 	// Template.View.less
-	
+
 	.header, .footer {
-	    .btn { padding: 0 4px; }
 	    .btn [class^="icon-"]:before { font-size: 1em;  }
 	}
-	
+
 	.header > *:not(.titlebox), .footer > *:not(.titlebox) { padding:0;  }
-	
+
 	.reader .pagename { font-size:1.5em; line-height:1.5;}
 	.pagename {
 		font-size: 1.5em;
@@ -121,54 +151,58 @@ Section: Responsive styles for small viewports or screens
 		width:2.5em;
 		height:1.5em;
 		border:none;
-		b:before {content:""}; 
+		b:before {content:""};
 	}
-	
+
 	.breadcrumb { display:none; }
-	
+
 	// Template.UserBox.less
-	
-	.userbox ul.dropdown-menu { 
-			max-width:@wiki-small-viewport-menu-width;
+
+	.userbox ul.dropdown-menu {
+			max-width:@wiki-small-viewport-dialog-width;
 			li:first-child a { white-space:normal; }
 	}
-	
+
 	// Template.SearchBox.less
-	.searchbox ul.dropdown-menu { max-width: @wiki-small-viewport-menu-width; }
+	.searchbox ul.dropdown-menu { max-width: @wiki-small-viewport-dialog-width; }
 
 	// Template.Nav.less
 	// Only show the menu icons
-	.header > .navigation .nav > li > a { 
-		padding: 5px 10px; 
+	.header > .navigation .nav > li > a {
+		padding: 5px 10px;
 		> *:first-child { display:initial; }
 		> *:nth-child(even) { display:none; }
 	}
 
 	// Template.Content.less
 	/* hide sidebar on extra small devices, and give it a fixed width
-	   by default  sidebar is now visible !  and will overlay the main page
-			.active : should now hide the sidebar
-			not(.active) : should overlay the sidebar over the main page content
+	   the sidebar will overlay the main page which remains fit to 100% of the screen-size
 	*/
-
 	.content {
-		.sidebar, &:after { width: @wiki-small-viewport-menu-width; margin-left:0 }	
+		.sidebar, &:after { width: @wiki-small-viewport-dialog-width; }
+	}
+
+	//hide sidebar
+	.content {
+		.sidebar, &:after { margin-left:-100%; }
 	}
 	.sidebar { position:absolute; }
+
+	//show sidebar
 	.content.active {
     	.page { width:100%; }  //keep full width
-    	.sidebar, &:after { margin-left: -100%; }
-	}	
+    	.sidebar, &:after { margin-left:0; }
+	}
 	.fav-right {
-    	.content {
-	    	.sidebar, &:after { margin-right:0; }
+		.content {
+	    	.sidebar, &:after { margin-right:-100%; }
     	}
-    	.sidebar { right:0; }  //positon = absolution 
-	    .content.active {
-    	    .sidebar, &:after { margin-right:-100%; }
+    	.sidebar { right:0; }  //positon = absolution
+		.content.active {
+    	    .sidebar, &:after { margin-right:0; }
 	    }
 	}
-	
+
 	.page-content input { .input-xs; }
 	.page-content .btn { .btn-xs; }
 
@@ -182,30 +216,30 @@ Section: Responsive styles for small viewports or screens
 	.snipe {
 
 		.btn { .btn-xs; }
-				
-		ul.dropdown-menu { 
-			max-width:@wiki-small-viewport-menu-width;
+
+		ul.dropdown-menu {
+			max-width:@wiki-small-viewport-dialog-width;
 		}
-		
+
 		//hack :: unclear why this is not already inline ?
 		> .form-group  > .form-group { display:inline-block; margin-bottom:0; }
-		
+
 		//remove less used button to make toolbar fit on narrow screens
-		.editor-tools [data-cmd=undo],		
+		.editor-tools [data-cmd=undo],
 		.editor-tools [data-cmd=redo] { display:none; }
 	}
-	input#changenote { max-width: @wiki-small-viewport-menu-width; }
+	input#changenote { max-width: @wiki-small-viewport-dialog-width; }
 
 
 	.modal,
 	.slmbx,
 	.dialog.find {
-		max-width:@wiki-small-viewport-menu-width;
+		max-width:@wiki-small-viewport-dialog-width;
 		.btn { .btn-xs; }
 		input.form-control { .input-xs; }
-	} 
+	}
 
-	
+
 	// Dialog.less
 	// Template.Preview.less
 
@@ -221,6 +255,13 @@ Section: Responsive styles for small viewports or screens
     // Accordion.less
     // Columns.less
     // Collapsible.less
+    .bullet {
+    	margin: @nav-sm-link-padding;
+	    &.xpand {
+    		margin: @nav-sm-link-padding-swap;
+	    }
+    }
+
     // Category.less
 
     // Flip.less
