@@ -445,7 +445,6 @@ button + a.infolink {
     > img { display:none; }
 }
 
-
 /*
 Interwiki links
 */
