@@ -50,11 +50,15 @@
 
   <wiki:Include page="Header.jsp" />
 
-  <c:set var="sidebar"><wiki:Variable var="sidebar" default="${prefs.Sidebar}" /></c:set>
+  <c:set var="sidebarState"><wiki:Variable var="sidebar" default="${prefs.Sidebar}" /></c:set>
+  <c:set var="sidebarCookie" value="Sidebar" />
   <wiki:CheckRequestContext context='login|prefs|createGroup|viewGroup|conflict'>
-    <c:set var="sidebar" value="" />
+    <c:set var="sidebarState" value="" />
+    <c:set var="sidebarCookie" value="" />
   </wiki:CheckRequestContext>
-  <div class="content ${sidebar}" data-toggle="li#menu,.sidebar>.close" data-toggle-pref="Sidebar" >
+
+  <div class="content ${sidebarState}" data-toggle="li#menu,.sidebar>.close"
+                                       data-toggle-pref="${sidebarCookie}" >
     <div class="page">
       <wiki:Content/>
       <wiki:Include page="PageInfo.jsp"/>
